--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ Among the more important Punjabi poets are Bhai Vir Singh in the 19th century an
 	</div>
 </div>
           				<div class="copyright"><p>© Copyright <b>PANJAB</b>. All Rights Reserved</p>
-Designed By <B>JOBAN KANG & SANJU THAKUR</B><br/><br/><br/></div></div>    
+Designed By <B>JOBAN KANG </B><br/><br/><br/></div></div>    
 
             </div>
 </body>
